faster solution for task O

--- a/Yandex.Contest.20/O. Monopoly++.ipynb
+++ b/Yandex.Contest.20/O. Monopoly++.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 120,
    "id": "26a31501-c6c0-4bd4-9596-162ff8c9b010",
    "metadata": {},
    "outputs": [],
@@ -87,12 +87,14 @@
     "    \n",
     "    cur_cap = start_capital\n",
     "    inds_taken = []\n",
+    "    \n",
     "        \n",
     "    for step in range(max_buildings):\n",
     "        ind_max = -1\n",
     "        max_ac = -1\n",
     "        for i in range(len(buildings)):            \n",
     "            if i in inds_taken:\n",
+    "            #if inds_taken[i]:\n",
     "                continue\n",
     "                \n",
     "            b = buildings[i]\n",
@@ -105,13 +107,14 @@
     "        if max_ac >= 0:\n",
     "            cur_cap += max_ac\n",
     "            inds_taken.append(ind_max)\n",
+    "            #inds_taken[ind_max] = True\n",
     "    \n",
     "    return cur_cap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 121,
    "id": "fe47c329-b9d6-4997-aa01-564e6a3bbec0",
    "metadata": {},
    "outputs": [],
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 122,
    "id": "f74a1879-4e03-4cf9-8b6a-2b70c7159c54",
    "metadata": {},
    "outputs": [],
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 123,
    "id": "e172d5ed-2c60-485b-ac45-537376417a19",
    "metadata": {},
    "outputs": [],
@@ -181,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 124,
    "id": "3b129723-7b7d-4d7d-b662-96a40a8a2e9a",
    "metadata": {},
    "outputs": [],
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 125,
    "id": "41e2dcb6-3760-42b6-a278-584f55d4ba92",
    "metadata": {},
    "outputs": [
@@ -211,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 126,
    "id": "18e6a330-b0b1-48d6-86d9-8498581a612c",
    "metadata": {},
    "outputs": [
@@ -231,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 127,
    "id": "b8a43b90-7e32-4b0c-b671-6ae28ca65c4a",
    "metadata": {},
    "outputs": [
@@ -251,19 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 128,
    "id": "6da7323e-d29a-4dd0-b30a-2813116948f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000\n",
+    "n = 500\n",
     "big_case_1 = make_big_case(n, 1)\n",
-    "big_case_2 = make_big_case(2*n, 1)"
+    "big_case_2 = make_big_case(2*n, 1)\n",
+    "big_case_4 = make_big_case(4*n, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 129,
    "id": "d9d5b7d5-cae9-40f5-9e97-8eb8e305fdba",
    "metadata": {},
    "outputs": [
@@ -273,18 +277,23 @@
      "text": [
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    5468\n",
-      "2.45 sec\n",
+      "\tactual    2816\n",
+      "0.02 sec\n",
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    11020\n",
-      "17.86 sec\n"
+      "\tactual    5468\n",
+      "0.08 sec\n",
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    10727\n",
+      "0.30 sec\n"
      ]
     }
    ],
    "source": [
     "t.test_big_case(big_case_1)\n",
-    "t.test_big_case(big_case_2)"
+    "t.test_big_case(big_case_2)\n",
+    "t.test_big_case(big_case_4)"
    ]
   },
   {
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 138,
    "id": "c583949a-0b67-477b-9d51-b0aed6cf5b77",
    "metadata": {},
    "outputs": [],
@@ -350,7 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 139,
+   "id": "0f9817a4-5f52-4b77-8163-e6743634741c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Tester(parse_case, get_max_final_capital)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "id": "66aad118-1ea9-49c8-96e0-c777d8329429",
    "metadata": {},
    "outputs": [
@@ -378,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 141,
    "id": "e87cf311-9618-4633-831b-0ee47a78400e",
    "metadata": {},
    "outputs": [
@@ -388,18 +407,23 @@
      "text": [
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    5468\n",
-      "2.48 sec\n",
+      "\tactual    2816\n",
+      "0.34 sec\n",
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    11020\n",
-      "19.52 sec\n"
+      "\tactual    5468\n",
+      "2.52 sec\n",
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    10727\n",
+      "17.98 sec\n"
      ]
     }
    ],
    "source": [
     "t.test_big_case(big_case_1)\n",
-    "t.test_big_case(big_case_2)"
+    "t.test_big_case(big_case_2)\n",
+    "t.test_big_case(big_case_4)"
    ]
   },
   {
@@ -412,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 142,
    "id": "468290e1-c596-473a-9d3f-be6da93c1b4a",
    "metadata": {},
    "outputs": [],
@@ -447,7 +471,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 143,
+   "id": "f741917b-e1e4-45d3-9797-5cde46f69776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Tester(parse_case, get_max_final_capital)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "id": "15dd9f4b-bd7f-4e97-9e5d-8925488a31b9",
    "metadata": {},
    "outputs": [
@@ -475,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 145,
    "id": "fe281972-44a8-4f0f-a82e-512e8756dc14",
    "metadata": {},
    "outputs": [],
@@ -512,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 146,
    "id": "15827607-87b2-4319-a564-fe67d42ece94",
    "metadata": {},
    "outputs": [
@@ -522,32 +556,172 @@
      "text": [
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    5468\n",
-      "2.45 sec\n",
+      "\tactual    2816\n",
+      "0.19 sec\n",
       "fail\n",
       "\texpected  -1\n",
-      "\tactual    11020\n",
-      "19.44 sec\n"
+      "\tactual    5468\n",
+      "1.22 sec\n",
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    10727\n",
+      "9.86 sec\n"
      ]
     }
    ],
    "source": [
     "t.test_big_case(big_case_1)\n",
-    "t.test_big_case(big_case_2)"
+    "t.test_big_case(big_case_2)\n",
+    "t.test_big_case(big_case_4)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "71f6965c-3667-421f-8e2a-bb9795057ad8",
+   "metadata": {},
+   "source": [
+    "Сложность алгоритма O(N*K*K)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca97aa38-3e01-42a2-869f-9e02380e94c8",
+   "id": "a652729b-118f-4001-bbbc-fbce1bb96ca5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Но если для проверки включения использовать словарь - будет работать быстрее. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "c9404a78-5f7d-4054-89b7-b46263c1921a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Building:\n",
+    "    def __init__(self, need_capital, added_capital) -> None:\n",
+    "        self.need_capital = need_capital\n",
+    "        self.added_capital = added_capital\n",
+    "\n",
+    "def get_max_final_capital(buildings: List[Building], start_capital: int, max_buildings: int) -> int:\n",
+    "\n",
+    "    sorted_buildings = sorted(buildings, key=lambda b: b.added_capital, reverse=True)\n",
+    "    \n",
+    "    cur_cap = start_capital\n",
+    "    inds_taken = {i:False for i in range(len(buildings))}\n",
+    "        \n",
+    "    for step in range(max_buildings):        \n",
+    "        for i in range(len(buildings)):            \n",
+    "            if inds_taken[i]:\n",
+    "                continue            \n",
+    "                \n",
+    "            b = sorted_buildings[i]\n",
+    "            if b.need_capital <= cur_cap:\n",
+    "                cur_cap += b.added_capital\n",
+    "                inds_taken[i] = True    \n",
+    "                break\n",
+    "    \n",
+    "    return cur_cap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "41d313fd-3622-4488-bdc7-4b6ab7b9e523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Tester(parse_case, get_max_final_capital)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "e1b9a61d-c75e-444f-8da5-5111aa149d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n",
+      "\texpected  7\n",
+      "\tactual    7\n",
+      "pass\n",
+      "\texpected  21\n",
+      "\tactual    21\n",
+      "pass\n",
+      "\texpected  1\n",
+      "\tactual    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "t.test(cases[0])\n",
+    "t.test(cases[1])\n",
+    "t.test(cases[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "908e4ace-3c26-4e0b-86f8-9a9d65ee1652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10_00\n",
+    "big_case_1 = make_big_case(n, 1)\n",
+    "big_case_2 = make_big_case(2*n, 1)\n",
+    "big_case_4 = make_big_case(4*n, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "7aacf3df-13ab-4923-bb5d-fa6b983f7229",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    5434\n",
+      "0.02 sec\n",
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    10932\n",
+      "0.08 sec\n",
+      "fail\n",
+      "\texpected  -1\n",
+      "\tactual    21800\n",
+      "0.27 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "t.test_big_case(big_case_1)\n",
+    "t.test_big_case(big_case_2)\n",
+    "t.test_big_case(big_case_4)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a2c8ce05-6ebc-4ef7-8cdb-3dbd45a09eae",
+   "metadata": {},
+   "source": [
+    "Теперь сложность алгоритма O(N*K)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a652729b-118f-4001-bbbc-fbce1bb96ca5",
+   "id": "fceb7af0-3599-4add-9e2e-591c924dbacf",
    "metadata": {},
    "outputs": [],
    "source": []
