--- a/Yandex.Contest.20/R. Pasha and Mark.ipynb
+++ b/Yandex.Contest.20/R. Pasha and Mark.ipynb
@@ -35,31 +35,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "11749af6-3dc7-483e-a0bc-4ea54cd1a150",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_pasha_wins(n: int) -> bool:\n",
     "    \n",
-    "    return n%2 == 0\n",
-    "\n",
-    "\n"
+    "    return n%2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ec589acb-e286-48e8-a7b2-50bb66a47c9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Pasha\n",
+      "1 Mark\n",
+      "2 Pasha\n",
+      "3 Mark\n",
+      "4 Pasha\n",
+      "5 Mark\n",
+      "6 Pasha\n",
+      "7 Mark\n",
+      "8 Pasha\n",
+      "9 Mark\n",
+      "10 Pasha\n",
+      "11 Mark\n",
+      "12 Pasha\n",
+      "13 Mark\n",
+      "14 Pasha\n",
+      "15 Mark\n",
+      "16 Pasha\n",
+      "17 Mark\n",
+      "18 Pasha\n",
+      "19 Mark\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(20):\n",
+    "    if is_pasha_wins(n):\n",
+    "        print(n, 'Pasha')\n",
+    "    else:\n",
+    "        print(n, 'Mark')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec589acb-e286-48e8-a7b2-50bb66a47c9e",
+   "id": "1fc8f6d9-fb46-4a92-b0c1-b68f73ea1877",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(20)\n",
-    "    if is_pasha_wins(n):\n",
-    "        print('Pasha')\n",
-    "    else:\n",
-    "    print('Mark')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
